# pro-pain-t

./: .gitignore  README.md
.github/workflows/: plantuml.yml  rust.yml
docs/: use-case.md  use-case.puml
pro-pain-t-app/: Cargo.toml  index.html
pro-pain-t-app/src/: app.rs  lib.rs  main.rs  styles.css  view_state.rs
pro-pain-t-app/src/components/: alpha_slider.rs  brush_size_slider.rs  canvas_area.rs  canvas_size_window.rs  color_picker.rs  edit_layer_window.rs  layer_panel.rs  layer_preview.rs  mod.rs  new_layer_window.rs  new_project_window.rs  rgb_slider.rs  status_bar.rs  tool_palette.rs  toolbar.rs
pro-pain-t-app/src/events/: error.rs  listeners.rs  mod.rs
pro-pain-t-app/src/render/: canvas_renderer.rs  mod.rs
pro-pain-t-app/src/state/: mod.rs  workspace_state.rs
pro-pain-t-app/src/structs/: canvas.rs  color.rs  history.rs  layer.rs  mod.rs  pixel.rs  project.rs
pro-pain-t-app/src/tools/: brush.rs  bucket.rs  context.rs  eraser.rs  eyedropper.rs  geometry.rs  line.rs  mod.rs  pan.rs  pen.rs  select.rs  tools.rs
pro-pain-t-app/src/utils/: geometry.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/dtos/: error_message.rs  export_object.rs  image.rs  mod.rs  path.rs  project.rs  save_object.rs
shared/src/events/: events.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  menus.rs
src-tauri/src/events/: commands.rs  handlers.rs
