[package]
name = "pro-pain-t-app"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.25.9"
leptos = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "HtmlElement", "CanvasRenderingContext2d", "DomRect", "ImageData", ] }
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"