[package]
name = "pro-pain-t-app"
version = "0.1.0"
edition = "2024"

[features]
default = []
tauri = ["dep:tauri-sys", "dep:futures"]

[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.25.9"
leptos = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "HtmlElement", "CanvasRenderingContext2d", "DomRect", "ImageData", ] }
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
pro-pain-t-shared = { version = "0.1.0", path = "../shared" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["all"], optional = true }
futures = { version = "0.3.31", optional = true }
wasm-bindgen = "0.2.108"
